baseUrl as link

--- a/build_production/index.html
+++ b/build_production/index.html
@@ -58,7 +58,7 @@
             </p>
 
             <div class="flex flex-wrap space-y-4 md:space-y-0 mt-20 mb-10">
-                <a href="/docs/getting-started" title="APRED (Analysis Platform for Risk and Expenditure in Disaster) getting started" class="w-full text-center btn md:flex-1">
+                <a href="https://ctil.iu.edu/projects/apred-landing/docs/getting-started" title="APRED (Analysis Platform for Risk and Expenditure in Disaster) getting started" class="w-full text-center btn md:flex-1">
                     Learn how to use APRED
                 </a>
 
