--- a/build_production/404/index.html
+++ b/build_production/404/index.html
@@ -36,7 +36,7 @@
         <header class="flex items-center shadow bg-white border-b h-24 mb-8 py-4" role="banner">
             <div class="container flex justify-between items-center max-w-8xl mx-auto px-4 lg:px-8">
                 <div class="flex items-center justify-start">
-                    <a href="/" title="APRED (Analysis Platform for Risk and Expenditure in Disaster) home" class="inline-flex items-center">
+                    <a href="https://ctil.iu.edu/projects/apred-landing/" title="APRED (Analysis Platform for Risk and Expenditure in Disaster) home" class="inline-flex items-center">
                         <img class="h-8 md:h-10 mr-3 hidden" src="/assets/img/logo.svg" alt="APRED (Analysis Platform for Risk and Expenditure in Disaster) logo" />
 
                         <h1 class="text-lg md:text-xl text-blue-900 font-thin hover:text-blue-600 my-0 pr-4">
