--- a/build_local/index.html
+++ b/build_local/index.html
@@ -49,11 +49,11 @@
                  
                     <div class="justify-end hidden md:flex items-center space-x-16">   
                         <nav class="flex space-x-6">
-                            <a class="text-gray-700 text-xl font-light inline-block custom-decoration" href="/docs/getting-started">
+                            <a class="text-gray-700 text-xl font-light inline-block custom-decoration" href="http://apred.test/docs/getting-started">
                                 Use Cases
                             </a>  
 
-                            <a class="text-gray-700 text-xl font-light inline-block custom-decoration" href="/docs/getting-started">
+                            <a class="text-gray-700 text-xl font-light inline-block custom-decoration" href="http://apred.test/docs/getting-started">
                                 About
                             </a> 
                         </nav> 
