--- a/build_local/404/index.html
+++ b/build_local/404/index.html
@@ -48,8 +48,10 @@
                 </div>
                  
                     <div class="justify-end hidden lg:flex lg:flex-1">
-                        <a href="https://ctil.iu.edu/projects/apred/#/" class="btn primary">
-                            Start Using APRED
+                        <a href="https://ctil.iu.edu/projects/apred/#/">
+                             <button class="py-2 px-6 bg-burgundy text-white rounded-full cursor-pointer hover:bg-red-700 transition duration-500">
+    Start Using APRED
+</button> 
                         </a>
                     </div>
                                 <div class="hidden flex flex-1 justify-end items-center text-right md:pl-10">
@@ -133,7 +135,7 @@
 
             <aside class="border-t border-gray-200 py-10">
                 <div class="container mx-auto">
-                    Copyright © 2021 The Trustees of Indiana University | Privacy Notice | Accessibility | Sitemap | 
+                    Copyright © 2021 The Trustees of Indiana University |
                     <a href="https://ctil.iu.edu/contact-us/index.html" class="custom-decoration">
                         Contact Us
                     </a>
