--- a/build_local/index.html
+++ b/build_local/index.html
@@ -84,7 +84,7 @@
     </main>
 
     <aside class="col-span-4 col-start-1 lg:col-span-2 lg:col-start-3 bg-cream">
-        <div class="px-4 py-12 mx-auto flex justify-between space-x-4">
+        <div class="px-4 py-12 space-x-4 flex justify-start">
             <aside class="px-6">
                  <div style="background: #D9D9D9" class="p-2 rounded-full">
     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -111,7 +111,7 @@
             </div>
         </div>
 
-        <div class="px-4 py-12 mx-auto flex justify-between space-x-4">
+        <div class="px-4 py-12 space-x-4 flex justify-start">
             <aside class="px-6">
                  <div style="background: #D9D9D9" class="p-2 rounded-full">
     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -138,7 +138,7 @@
             </div>
         </div>
 
-        <div class="px-4 py-12 mx-auto flex justify-between space-x-4">
+        <div class="px-4 py-12 space-x-4 flex justify-start">
             <aside class="px-6">
                  <div style="background: #D9D9D9" class="p-2 rounded-full">
     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
