--- a/build_local/index.html
+++ b/build_local/index.html
@@ -34,9 +34,9 @@
 
             </head>
 
-    <body class="flex flex-col justify-between min-h-screen bg-gray-100 text-gray-800 leading-normal font-sans mx-4">
+    <body class="flex flex-col justify-between min-h-screen bg-gray-100 text-gray-800 leading-normal font-sans">
         <header class="flex items-center h-10 mb-8 py-12" role="banner">
-            <div class="container flex justify-between items-center mx-auto">
+            <div class="container flex justify-between items-center mx-auto px-4">
                 <div class="flex items-center">
                     <a href="http://apred.test/" title="APRED (Analysis Platform for Risk and Expenditure in Disaster) home" class="inline-flex items-center relative">
                         <h1 class="text-5xl font-bold hover:text-red-600 my-0 pr-4">
@@ -67,7 +67,7 @@
                     </header>
 
         <main role="main" class="w-full flex-auto">
-            <section class="container mx-auto grid grid-cols-4 gap-24 pb-16">
+             <section class="mx-auto px-4 container mx-auto grid grid-cols-4 gap-24 pb-16">
     <main class="col-span-4 lg:col-span-2 pt-32">
         <h1 class="text-3xl font-light mb-24 tracking-normal leading-10">
             <span class="font-bold">APRED</span> is a map-based tool for exploring the 
@@ -164,9 +164,9 @@
             </div>
         </div>
     </aside>
-</section>
+</section> 
 
-<section class="bg-cream-thick py-12 -mx-4 px-4 lg:-mx-8 lg:px-8">
+ <section class="mx-auto px-4 bg-cream-thick py-12">
     <div class="container mx-auto lg:grid lg:grid-cols-2 lg:gap-24">
         <section class="lg:col-span-1 py-24">
             <header class="text-4xl font-normal">
@@ -196,14 +196,14 @@
             </p>
         </section>
     </div>
-</section>
+</section> 
 
         </main>
 
         <script src="http://apred.test/assets/build/js/main.js"></script>
 
         
-        <footer class="pt-16 bg-burgundy text-white -mx-4 px-4 lg:-mx-8 lg:px-8" role="contentinfo">
+        <footer class="pt-16 bg-burgundy text-white px-4" role="contentinfo">
             <main class="container grid grid-cols-2 mx-auto gap-32 mb-16">
                 <section class="col-span-2 lg:col-span-1 inline-block align-middle">
                     <p>
