forgot to hide the hmaburger on non mobile view

--- a/build_local/index.html
+++ b/build_local/index.html
@@ -63,8 +63,10 @@
                     </div>
                 
                             </div>
-
-                    </header>
+            
+            <div class="lg:hidden">
+                            </div>
+        </header>
 
         <main role="main" class="w-full flex-auto">
              <section class="mx-auto px-4 container mx-auto grid grid-cols-4 gap-24 pb-16">
