--- a/build_local/404/index.html
+++ b/build_local/404/index.html
@@ -56,8 +56,10 @@
                     </div>
                 
                             </div>
-
-                    </header>
+            
+            <div class="lg:hidden">
+                            </div>
+        </header>
 
         <main role="main" class="w-full flex-auto">
             <div class="flex flex-col items-center mt-32 text-gray-700">
