Content updates and fixes
Content changes and fixes.

--- a/build_local/index.html
+++ b/build_local/index.html
@@ -7,19 +7,19 @@
         <meta name="description" content="This website is used to assess the likelihood that a potential applicant might be 
     eligible for disaster declaration funding.">
 
-        <meta property="og:site_name" content="APRED (Analysis Platform for Risk and Expenditure in Disaster)"/>
-        <meta property="og:title" content="APRED (Analysis Platform for Risk and Expenditure in Disaster)"/>
+        <meta property="og:site_name" content="APRED (Analysis Platform for Risk, Resilience, and Expenditure in Disaster)"/>
+        <meta property="og:title" content="APRED (Analysis Platform for Risk, Resilience, and Expenditure in Disaster)"/>
         <meta property="og:description" content="This website is used to assess the likelihood that a potential applicant might be 
     eligible for disaster declaration funding."/>
         <meta property="og:url" content="http://apred.test/"/>
         <meta property="og:image" content="/assets/img/logo.png"/>
         <meta property="og:type" content="website"/>
 
-        <meta name="twitter:image:alt" content="APRED (Analysis Platform for Risk and Expenditure in Disaster)">
+        <meta name="twitter:image:alt" content="APRED (Analysis Platform for Risk, Resilience, and Expenditure in Disaster)">
         <meta name="twitter:card" content="summary_large_image">
 
         
-        <title>APRED (Analysis Platform for Risk and Expenditure in Disaster)</title>
+        <title>APRED (Analysis Platform for Risk, Resilience, and Expenditure in Disaster)</title>
 
         <link rel="home" href="http://apred.test">
         <link href="https://assets.iu.edu/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
@@ -38,7 +38,7 @@
         <header class="flex items-center h-10 mb-8 py-12" role="banner">
             <div class="container flex justify-between items-center mx-auto px-4">
                 <div class="flex items-center">
-                    <a href="http://apred.test/" title="APRED (Analysis Platform for Risk and Expenditure in Disaster) home" class="inline-flex items-center relative">
+                    <a href="http://apred.test/" title="APRED (Analysis Platform for Risk, Resilience, and Expenditure in Disaster) home" class="inline-flex items-center relative">
                         <h1 class="text-5xl font-bold hover:text-red-600 my-0 pr-4">
                             <span class="text-burgundy">
                                 APRED
@@ -209,7 +209,7 @@
             <main class="container grid grid-cols-2 mx-auto gap-32 mb-16">
                 <section class="col-span-2 lg:col-span-1 inline-block align-middle">
                     <p>
-                        This publication was prepared by the CTIL and IBRC at Indiana University using Federal funds 
+                        This publication was prepared by the CTIL and IBRC at Indiana University using federal funds 
                         awarded to the Trustees of Indiana University and as a sub-component under award number 
                         ED17HDQ3120040 from the U.S. Economic Development Administration, U.S. Department of Commerce. 
                         The statements, findings, conclusions, and recommendations are those of the author(s) and 
