--- a/build_production/index.html
+++ b/build_production/index.html
@@ -4,22 +4,20 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="description" content="This website is used to assess the likelihood that a potential applicant might be 
-    eligible for disaster declaration funding.">
+        <meta name="description" content="This website displays the disaster profile of counties across the United States.">
 
-        <meta property="og:site_name" content="APRED (Analysis Platform for Risk and Expenditure in Disaster)"/>
-        <meta property="og:title" content="APRED (Analysis Platform for Risk and Expenditure in Disaster)"/>
-        <meta property="og:description" content="This website is used to assess the likelihood that a potential applicant might be 
-    eligible for disaster declaration funding."/>
+        <meta property="og:site_name" content="APRED (Analysis Platform for Risk, Resilience and Expenditure in Disaster)"/>
+        <meta property="og:title" content="APRED (Analysis Platform for Risk, Resilience and Expenditure in Disaster)"/>
+        <meta property="og:description" content="This website displays the disaster profile of counties across the United States."/>
         <meta property="og:url" content="https://ctil.iu.edu/projects/apred-landing/"/>
         <meta property="og:image" content="/assets/img/logo.png"/>
         <meta property="og:type" content="website"/>
 
-        <meta name="twitter:image:alt" content="APRED (Analysis Platform for Risk and Expenditure in Disaster)">
+        <meta name="twitter:image:alt" content="APRED (Analysis Platform for Risk, Resilience and Expenditure in Disaster)">
         <meta name="twitter:card" content="summary_large_image">
 
         
-        <title>APRED (Analysis Platform for Risk and Expenditure in Disaster)</title>
+        <title>APRED (Analysis Platform for Risk, Resilience and Expenditure in Disaster)</title>
 
         <link rel="home" href="https://ctil.iu.edu/projects/apred-landing">
         <link rel="icon" href="/favicon.ico">
@@ -222,7 +220,7 @@
                     </p>
 
                     <p class="max-w-4xl">
-                        This publication was prepared by the CTIL and IBRC at Indiana University using Federal funds 
+                        This publication was prepared by the CTIL and IBRC at Indiana University using federal funds 
                         awarded to the Trustees of Indiana University and as a sub-component under award number 
                         ED17HDQ3120040 from the U.S. Economic Development Administration, U.S. Department of Commerce. 
                         The statements, findings, conclusions, and recommendations are those of the author(s) and 
@@ -250,7 +248,7 @@
                 <li class="block mt-4 lg:mt-2">
                     <a href="https://www.iu.edu/copyright/index.html">
                         Copyright
-                    </a> &copy; 2020 The Trustees of 
+                    </a> &copy; 2021 The Trustees of 
                     <a href="https://www.iu.edu/">
                         Indiana University
                     </a>
